# If7

./: README.md  io.html  isha.js  llm.js  set.txt  style.css
code26/: mainpy  text  version0001  version0002  versionfile003  versionfile004
code26/codeX/: CMakeLists.txt  README.md  main.cpp  main.py
code26/codeX/Mod/: Mo  README.md  mod1.py  mod2.py
code26/fixedcode/: file0001  file0002  isha.py  run.cpp  v00
isha_pc/: d.txt  isha5.5.5.5.0  isha_assistant.py  isha_llm  run.py
